# pipe_robot_rl

./: README.md  test_world
Tools/: 爬管机器人B版设计说明20250208.docx
Tools/matlabHandle/: angle.txt  autoPipe.m  autoPipePlot.m  dia.txt  dia2Angle.m  lengthData.m  pipeV.asv  pipeV.m  test.m  theta2Length.m  wheelData.m  小臂角度和管径的对应关系20250908.docx
Tools/matlabHandle/data/: back.csv  front.csv  output_b.csv  output_f.csv
URDF/pipe_robot/: CMakeLists.txt  package.xml
URDF/pipe_robot/urdf/: pipe_robot.urdf
URDF/test2_pkg/: .CMakeLists.txt  package.xml
URDF/test2_pkg/launch/: display.launch
URDF/test2_pkg/meshes/: base_link.STL  link3.STL
URDF/test2_pkg/urdf/: test2_pkg.csv
URDF/test_pkg/: package.xml
URDF/test_pkg/meshes/: link2.STL
URDF/test_pkg/urdf/: test_pkg.sdf
control/test_ctrl/: CMakeLists.txt  package.xml
control/test_ctrl/config/: controllers.yaml
control/test_ctrl/launch/: gazebo.launch  gazebo_pro.launch
control/test_ctrl/urdf/: test2_control.urdf
models/test1/: model.config
models/test2/: model.config  model.sdf  model_pro.sdf  test2_pkg.urdf
pipe_robot_ros2/: CMakeLists.txt  package.xml
pipe_robot_ros2/launch/: pipe_robot_launch.py
pipe_robot_ros2/models/pipe_env/: model.config
pipe_robot_ros2/models/pipe_robot/: pipe_robot.urdf  pipe_robot_model.sdf
test2_pkg/launch/: gazebo.launch
test_ctrl_ros2/: CMakeLists.txt  package.xml
test_ctrl_ros2/config/: controllers.yaml
test_ctrl_ros2/launch/: speed_ctrl_launch.py  test2_gazebo_launch.py
test_ctrl_ros2/models/test2/: mini_model.urdf  model_pro.sdf
test_ctrl_ros2/models/test2/meshes/: base_link.stl
test_ctrl_ros2/scripts/: speed_ctrl_node.py
test_pkg/: CMakeLists.txt
test_pkg/config/: joint_names_test_pkg.yaml
test_pkg/launch/: display.launch  gazebo.launch
test_pkg/meshes/: link1.STL  link4.STL
test_pkg/urdf/: test_pkg.csv  test_pkg.urdf
worlds/: NO1.sdf  NO2.sdf
